Quals: News block - fix display wrap for events #218285

--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,11 @@
     margin-bottom: 15px;
 }
 
+.block_news_event .block-news-message-text {
+    clear: left;
+    padding-top: 10px;
+}
+
 .block_news_message .messageimage img,
 .block_news .messageimage img {
     max-width: 100%;
